# Keploy_Issue_3521

./: README.md  keploy.yml
keploy-cpp-quickstart/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose-tmp.yaml  docker-compose.yml  keploy-logs.txt
keploy-cpp-quickstart/keploy/test-set-0/tests/: test-1.yaml  test-2.yaml
keploy-cpp-quickstart/keploy/test-set-1/: mocks.yaml
keploy-cpp-quickstart/keploy/test-set-1/tests/: test-1.yaml  test-2.yaml  test-3.yaml
keploy-cpp-quickstart/keploy/test-set-2/: mocks.yaml
keploy-cpp-quickstart/keploy/test-set-3/: mocks.yaml
keploy-cpp-quickstart/keploy/test-set-3/tests/: test-1.yaml
keploy-cpp-quickstart/src/: main.cpp
